--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tick-price-animation",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://geyu210.github.io/tick-price-animation",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
